# circuits

./: .gitattributes  CMakeLists.txt  readme.md
docs/: README.md  architecture.md  main.md  project-layout.md  rendering.md  roadmap.md  simulator.md  ui-toolkit.md  usage.md  widgets.md  windowing.md
libs/OpenSans_ettf/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
src/: main.cpp
src/base/: Context.cpp  Context.h  IScreen.cpp  IScreen.h  IWidget.cpp  IWidget.h  Position.cpp  Position.h  Rect.cpp  Rect.h  Size.cpp  Size.h
src/base/interface/: IScreen.h  IViewmodel.h  IWidget.h
src/components/: Bulb.cpp  Bulb.h  Clock.cpp  Clock.h  Constant.cpp  Constant.h  Display.cpp  Display.h  Gate.cpp  Gate.h  Switch.cpp  Switch.h  Toggle.cpp  Toggle.h
src/core/: IContext.h  IScreen.h  IViewmodel.h  IWidget.cpp  IWidget.h  Modifier.cpp  Modifier.h  Rect.cpp  Rect.h  UIScreen.cpp  UIScreen.h
src/enums/: Align.h  Appearance.h  Baseline.h  Cap.h  Cursor.h  FontRole.h  Gravity.h  HAlign.h  Joint.h  SizeType.h  SizeUnit.h  State.h  SystemTheme.h  ThemeName.h  VAlign.h
src/graphics/: Color.cpp  Color.h  Font.cpp  Font.h  Path.cpp  Path.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
src/manager/: CursorManager.cpp  CursorManager.h  ThemeManager.cpp  ThemeManager.h
src/rx/: Computed.h  Observable.h  State.h
src/simulator/: Application.cpp  Application.h
src/simulator/screen/: MainScreen.cpp  MainScreen.h  MainVM.cpp  MainVM.h
src/ui/: IWidget.cpp  Modifier.cpp  Modifier.h  Theme.cpp  Theme.h  UI.cpp  UI.h
src/ui/layout/: Box.cpp  Box.h  Column.cpp  Column.h  Row.cpp  Row.h
src/ui/theme/: Theme.cpp  Theme.h  ThemeManager.cpp  ThemeManager.h
src/ui/widget/: Button.cpp  Button.h  Card.cpp  Card.h  Checkbox.cpp  Checkbox.h  Divider.cpp  Divider.h  Image.cpp  Image.h  Input.cpp  Input.h  Label.cpp  Label.h  Progress.cpp  Progress.h  RadioButton.cpp  RadioButton.h  RadioGroup.cpp  RadioGroup.h  RxLabel.cpp  RxLabel.h  Toggle.cpp  Toggle.h
src/utils/: Assets.cpp  Assets.h  ColorUtils.cpp  ColorUtils.h  OpenSans_Regular_ttf.hpp  WidgetUtils.cpp  WidgetUtils.h
src/window/: Event.cpp  Event.h  Key.cpp  Key.h  Window.cpp  Window.h
